# queb

./: .admin_key  .cursorignore  .cursorignore.backup  .env.example  .gcloudignore  .gitignore  .molrc  .prettierignore  .rc  .server.js.swp  AGENTS.md  AUTO_RUN_COMPLETE.md  AppPlacement.js  COMPONENT-MAP.md  ENVIRONMENT_LOADING.md  Gemfile  LIVE_RELOAD.md  MODULAR_REFACTOR.md  MoleculeViewer.jsx  QUEB_SPACE_SETUP.md  README.md  README_DEVELOPMENT.md  REORGANIZATION_PLAN.md  RESTORATION-LOG.md  ROBUSTNESS_GUIDE.md  SCREENSHOT_SYSTEM_DEMO.md  SDF_DISPLAY_TESTING.md  SETUP.md  TESTING.md  TESTING_MOLECULAR_VISUALIZATION.md  TODO.txt  VERSION_CONFIGURATION.md  VERSION_TOGGLE.md  add-version  app-dev.yaml  app.yaml  auto-add-version  babel.config.js  build  build-production.js  (+70 more)
.claude/: mcp.json
.cursor/: .cursorignore
.github/: auto-merge.md  dependabot.yml  mobile-access.md
.husky/: post-commit  pre-commit
MoleculeViewer.jsx.d/: MoleculeViewer.css  MoleculeViewer.test.jsx  README.md
agents/: README.md  openai_response_api.json  structuralize-api-contract.js
backend/: component-registry.mdc  design-principles.mdc  naming-consistency.mdc  payment-toggle.mdc  setup-database.sh  test-structuralizer.js
bio/: .ingredients.swp  food.py  ingredients  search.py
chrome/: ChromeUtils.js
config/: app-placement.js  config.toml  debug-config.js  dotenv-vault-config.js  (+7 more)
util/: README.md  __init__.py  data.py  dev  download-test-image.js  pyproject.toml
util/lib/: README.md
util/lib/examples/: advanced-usage.js  basic-usage.js
util/python/tests/: test_relation.py
(+2102 files in other folders)
